--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.7",
     "sass": "^1.57.1"
   },
   "devDependencies": {
